# zz-ai-docs

./: README.md  check_index.py  check_indexer.py  generate_embeddings.py  pyproject.toml  requirements.txt  test_cli_doc.txt  test_text_search.py  test_vector_search.py  verify.py  verify_azure.py  verify_pinecone.py
app/: cli.py  main.py
app/adapters/azure/: ai_search.py  cosmos_mongo_vcore.py
app/adapters/custom/: local_storage.py  memory_store.py  random_embedding.py
app/adapters/pinecone/: store.py
app/api/: dependencies.py  routes.py
app/core/: config.py  interfaces.py  models.py
app/services/: ingestion.py
docs/: PINECONE_SETUP.md
infra/: bicepconfig.json  main.bicep
infra/modules/search/: search.bicep
infra/modules/storage/: storage.bicep
zz_docs_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
